--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -15,6 +15,8 @@
     font-size: 13px;
     font-weight: 400;
     white-space: nowrap;
+    align-items: center;
+    cursor: pointer;
     
 }
 .channel-list{
