--- a/src/components/MyProfile/MyProfile.css
+++ b/src/components/MyProfile/MyProfile.css
@@ -97,8 +97,9 @@
   @media (max-width: 1048px){
     .user-info-popup{
         top: 0; 
-        width: 60%;
-        left: 20%;
-        justify-content: center;
+        width: 30%;
+        margin-left: 20%;
+        left: 0;
+        
     }
   }
