--- a/src/components/CardComponent/CardComponent.css
+++ b/src/components/CardComponent/CardComponent.css
@@ -207,6 +207,17 @@
         left: 85%;
 
     }
+    .comments-top{
+        gap: 5px;
+    }
+    .comments-top-input{
+        width: 40%;
+        padding: 5px;
+        border-radius: 15px;
+    }
+    .comments-top-button button{
+        padding: 5px 8px;
+    }
   }
 
   
