--- a/src/components/CardComponent/CardComponent.css
+++ b/src/components/CardComponent/CardComponent.css
@@ -219,7 +219,8 @@
         padding: 5px 8px;
     }
     .comments-content-lower{
-        justify-content: space-around;
+        justify-content: flex-start;
+        gap: 40px;
     }
   }
 
