--- a/src/components/CardComponent/CardComponent.css
+++ b/src/components/CardComponent/CardComponent.css
@@ -5,6 +5,8 @@
     box-shadow: 0px 5px 8px -9px rgba(0,0,0,0.5);
     gap: 10px;
     border: 1px solid rgba(0, 0, 0, 0.1);
+    max-width: 100%; /* Ensure the card does not exceed the viewport width */
+    margin: auto; /* Center the card */
    
 }
 .card-upper{
@@ -199,8 +201,9 @@
     color: #C2410C;
   }
   @media (max-width: 1048px){
-    .comments{
-        max-width: 100%;
+    .comments {
+        max-width: 100%; /* Ensure comments section does not overflow */
+        overflow-x: hidden; /* Prevent horizontal scrolling */
     }
     .comments-top{
         padding-right: 10px;
