--- a/src/components/CardComponent/CardComponent.css
+++ b/src/components/CardComponent/CardComponent.css
@@ -5,8 +5,7 @@
     box-shadow: 0px 5px 8px -9px rgba(0,0,0,0.5);
     gap: 10px;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    max-width: 100%; /* Ensure the card does not exceed the viewport width */
-    margin: auto; /* Center the card */
+  
    
 }
 .card-upper{
@@ -123,7 +122,7 @@
 }
 .comments-top-input{
     width: 65%;
-    background-color: white;
+    background-color: white; 
     padding: 8px;
     border-radius: 20px;
     display: flex;
@@ -132,7 +131,9 @@
 }
 .comments-top-input input{
     border: none;
-    font-size: 15px;
+    font-size: 12px;
+    overflow-x: hidden;
+   
 }
 .comments-top-input input:focus{
     outline: none;
@@ -219,14 +220,14 @@
     .comments-top-input{
         width: 40%;
         padding: 5px;
-        border-radius: 15px;
+       
     }
     .comments-top-button button{
         padding: 5px 8px;
     }
     .comments-content-lower{
-        justify-content: flex-start;
-        gap: 85%;
+        justify-content: space-between;
+        
         
     }
    
