--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -23,13 +23,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: -30px;
+    margin-top: 20px;
 }
 
 .quora-logo {
     width: 100px;
     height: 40px;
-    margin-bottom: 10px;
+
 }
 .text {
     all: unset;
